# machineid

./: CMakeLists.txt  LICENSE  machineid.cpp  machineid.h
src/machineid/: machineid.cpp
tests/: test.cpp
